[GCC5] java.lang.StackOverflowError on Zero JVM initialization on non x86 platforms

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 8u45, 9
    • Component/s: hotspot
    • Environment:

      Zero

    • b70
    • other, arm
    • linux

        This is an upstream bug for https://bugzilla.redhat.com/show_bug.cgi?id=1206656

        A Zero JVM product build on non-x86 platforms fails with java.lang.StackOverflowError on java -version:
        $ ./jdk8.build/images/j2sdk-image/bin/java -version
        Error occurred during initialization of VM
        java.lang.StackOverflowError
        at java.lang.Object.<clinit>(Object.java:41)

        We know this happens on armv7hl, s390/s390x systems with GCC 5. It was originally discovered with JDK 8, but since JDK 9 has the same code it's affected as well.

              Assignee:
              Severin Gehwolf
              Reporter:
              Severin Gehwolf
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: